fix : updateBoardImages